; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/syslogd/extr_syslogd.c_deadq_remove.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/syslogd/extr_syslogd.c_deadq_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.deadq_entry = type { i32 }

@deadq_head = common dso_local global i32 0, align 4
@dq_entries = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.deadq_entry*)* @deadq_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @deadq_remove(%struct.deadq_entry* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.deadq_entry*, align 8
  store %struct.deadq_entry* %0, %struct.deadq_entry** %3, align 8
  %4 = load %struct.deadq_entry*, %struct.deadq_entry** %3, align 8
  %5 = icmp ne %struct.deadq_entry* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load %struct.deadq_entry*, %struct.deadq_entry** %3, align 8
  %8 = load i32, i32* @dq_entries, align 4
  %9 = call i32 @TAILQ_REMOVE(i32* @deadq_head, %struct.deadq_entry* %7, i32 %8)
  %10 = load %struct.deadq_entry*, %struct.deadq_entry** %3, align 8
  %11 = call i32 @free(%struct.deadq_entry* %10)
  store i32 1, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %6
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.deadq_entry*, i32) #1

declare dso_local i32 @free(%struct.deadq_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
